ns2/setup.yaml
# #Create a namespace 2
apiVersion: v1
kind: Namespace
metadata:
  name: ns2
  labels:
    task: march
