ns2/deployment.yaml
#Task 1 - Deployment + Task 9
apiVersion: apps/v1
kind: Deployment
metadata:
  name: asp-deployment2
  namespace: ns2
  labels:
    app: web
    release: stable
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aspcore
  template:
    metadata:
      labels:
        app: aspcore
    spec:
      containers:
        - name: web-aspcore
          image: crj4r5.azurecr.io/webapp:31
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: "400m"
              memory: "256Mi"
            requests:
              cpu: "200m"
              memory: "128Mi"
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - aspcore
              topologyKey: "kubernetes.io/hostname"
