ns2/publish.yaml
#Publish the deployment through the Service
apiVersion: v1
kind: Service
metadata:
  name: demo-service2
  namespace: ns2
spec:
  selector:
    app: aspcore
  type: LoadBalancer
  ports:
    - name: name-of-the-port
      port: 80
      targetPort: 80
